apps/bentopdf/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bentopdf
  namespace: bentopdf
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: bentopdf
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bentopdf
          port: 8080
